# learn_api

./: .gitignore  Session.vim  justfile  main.py  notes.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0beb3337f971_create_post_table.py  363fd2c380cd_adding_foreign_key_to_the_post_table_by_.py  529441adb232_this_is_autogenerated_things.py  685312b4f604_creating_sequence_for_votes_system.py  8d43c474259e_create_post_table_with_every_columnfor_.py  bf86527279dc_create_post_table_with_every_column.py  f6fd31923866_creating_users_table.py  f8f7550a8fe5_creating_sequence_for_user_and_posts.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schema.py  utils.py
app/routers/: auth.py  posts.py  users.py  votes.py
tests/: adminLogin.json  header.txt  justfile  users.json
