[tool.poetry]
name = "learn-api"
version = "0.1.0"
description = "learning how to create api and every nitty gritty of it."
authors = ["exoutia <jhav365@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
bpython = "^0.24"
sqlalchemy = "1.4"
bcrypt = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
