[tool.poetry]
name = "learn-api"
version = "0.1.0"
description = "learning how to create api and every nitty gritty of it."
authors = ["exoutia <jhav365@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.0"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^1.0.0"
alembic = "^1.12.0"
annotated-types = "^0.6.0"
certifi = "^2023.7.22"
cffi = "^1.16.0"
click = "^8.1.7"
colorama = "^0.4.6"
cryptography = "^41.0.5"
dnspython = "^2.4.2"
ecdsa = "^0.18.0"
email-validator = "^2.1.0.post1"
greenlet = "^3.0.1"
gunicorn = "^21.2.0"
h11 = "^0.14.0"
httptools = "^0.6.1"
httpx = "^0.25.0"
idna = "^3.4"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
mako = "^1.2.4"
markupsafe = "^2.1.3"
orjson = "^3.9.10"
packaging = "^23.2"
psycopg2 = "^2.9.9"
pyasn1 = "^0.5.0"
pycparser = "^2.21"
pydantic-extra-types = "^2.1.0"
pydantic-settings = "^2.0.3"
pydantic = "^2.4.2"
python-multipart = "^0.0.6"
pyyaml = "^6.0.1"
rsa = "^4.9"
six = "^1.16.0"
sniffio = "^1.3.0"
typing-extensions = "^4.8.0"
ujson = "^5.8.0"
uvloop = "^0.19.0"
watchfiles = "^0.21.0"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
bpython = "^0.24"
sqlalchemy = "1.4"
bcrypt = "^4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
